// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trpc2OpenApi > complex zod schemas > should handle enum schemas 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "status": {
      "enum": [
        "active",
        "inactive",
        "pending",
      ],
      "type": "string",
    },
  },
  "required": [
    "status",
  ],
  "type": "object",
}
`;

exports[`trpc2OpenApi > complex zod schemas > should handle nested object schemas 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "customer": {
      "additionalProperties": false,
      "properties": {
        "email": {
          "format": "email",
          "pattern": "^(?!\\.)(?!.*\\.\\.)([A-Za-z0-9_'+\\-\\.]*)[A-Za-z0-9_+-]@([A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$",
          "type": "string",
        },
        "name": {
          "type": "string",
        },
      },
      "required": [
        "name",
        "email",
      ],
      "type": "object",
    },
    "items": {
      "items": {
        "additionalProperties": false,
        "properties": {
          "productId": {
            "type": "string",
          },
          "quantity": {
            "exclusiveMinimum": 0,
            "maximum": 9007199254740991,
            "type": "integer",
          },
        },
        "required": [
          "productId",
          "quantity",
        ],
        "type": "object",
      },
      "type": "array",
    },
  },
  "required": [
    "customer",
    "items",
  ],
  "type": "object",
}
`;

exports[`trpc2OpenApi > complex zod schemas > should handle optional fields 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "email": {
      "format": "email",
      "pattern": "^(?!\\.)(?!.*\\.\\.)([A-Za-z0-9_'+\\-\\.]*)[A-Za-z0-9_+-]@([A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$",
      "type": "string",
    },
    "id": {
      "type": "string",
    },
    "name": {
      "type": "string",
    },
  },
  "required": [
    "id",
  ],
  "type": "object",
}
`;

exports[`trpc2OpenApi > full spec snapshot > should generate complete OpenAPI spec for a typical API 1`] = `
{
  "components": {},
  "info": {
    "title": "User Management API",
    "version": "2.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/api/v2/createUser": {
      "post": {
        "operationId": "createUser",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$schema": "https://json-schema.org/draft/2020-12/schema",
                "additionalProperties": false,
                "properties": {
                  "email": {
                    "format": "email",
                    "pattern": "^(?!\\.)(?!.*\\.\\.)([A-Za-z0-9_'+\\-\\.]*)[A-Za-z0-9_+-]@([A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$",
                    "type": "string",
                  },
                  "name": {
                    "minLength": 1,
                    "type": "string",
                  },
                  "profile": {
                    "additionalProperties": false,
                    "properties": {
                      "avatar": {
                        "format": "uri",
                        "type": "string",
                      },
                      "bio": {
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                },
                "required": [
                  "name",
                  "email",
                ],
                "type": "object",
              },
            },
          },
          "required": true,
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "result": {
                      "properties": {
                        "data": {
                          "$schema": "https://json-schema.org/draft/2020-12/schema",
                          "additionalProperties": false,
                          "properties": {
                            "createdAt": {
                              "type": "string",
                            },
                            "id": {
                              "type": "string",
                            },
                          },
                          "required": [
                            "id",
                            "createdAt",
                          ],
                          "type": "object",
                        },
                      },
                      "required": [
                        "data",
                      ],
                      "type": "object",
                    },
                  },
                  "required": [
                    "result",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Successful response",
          },
        },
      },
    },
    "/api/v2/getUser": {
      "get": {
        "operationId": "getUser",
        "parameters": [
          {
            "content": {
              "application/json": {
                "schema": {
                  "$schema": "https://json-schema.org/draft/2020-12/schema",
                  "additionalProperties": false,
                  "properties": {
                    "id": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                  ],
                  "type": "object",
                },
              },
            },
            "in": "query",
            "name": "input",
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "result": {
                      "properties": {
                        "data": {
                          "$schema": "https://json-schema.org/draft/2020-12/schema",
                          "additionalProperties": false,
                          "properties": {
                            "email": {
                              "format": "email",
                              "pattern": "^(?!\\.)(?!.*\\.\\.)([A-Za-z0-9_'+\\-\\.]*)[A-Za-z0-9_+-]@([A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$",
                              "type": "string",
                            },
                            "id": {
                              "type": "string",
                            },
                            "name": {
                              "type": "string",
                            },
                            "role": {
                              "enum": [
                                "admin",
                                "user",
                                "guest",
                              ],
                              "type": "string",
                            },
                          },
                          "required": [
                            "id",
                            "name",
                            "email",
                            "role",
                          ],
                          "type": "object",
                        },
                      },
                      "required": [
                        "data",
                      ],
                      "type": "object",
                    },
                  },
                  "required": [
                    "result",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Successful response",
          },
        },
      },
    },
    "/api/v2/health": {
      "get": {
        "operationId": "health",
        "responses": {
          "200": {
            "description": "Successful response",
          },
        },
      },
    },
  },
}
`;

exports[`trpc2OpenApi > multiple procedures > should handle multiple procedures in a router 1`] = `
{
  "/api/createUser": {
    "post": {
      "operationId": "createUser",
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "$schema": "https://json-schema.org/draft/2020-12/schema",
              "additionalProperties": false,
              "properties": {
                "name": {
                  "type": "string",
                },
              },
              "required": [
                "name",
              ],
              "type": "object",
            },
          },
        },
        "required": true,
      },
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "result": {
                    "properties": {
                      "data": {
                        "$schema": "https://json-schema.org/draft/2020-12/schema",
                        "additionalProperties": false,
                        "properties": {
                          "id": {
                            "type": "string",
                          },
                          "name": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "id",
                          "name",
                        ],
                        "type": "object",
                      },
                    },
                    "required": [
                      "data",
                    ],
                    "type": "object",
                  },
                },
                "required": [
                  "result",
                ],
                "type": "object",
              },
            },
          },
          "description": "Successful response",
        },
      },
    },
  },
  "/api/deleteUser": {
    "post": {
      "operationId": "deleteUser",
      "requestBody": {
        "content": {
          "application/json": {
            "schema": {
              "$schema": "https://json-schema.org/draft/2020-12/schema",
              "additionalProperties": false,
              "properties": {
                "id": {
                  "type": "string",
                },
              },
              "required": [
                "id",
              ],
              "type": "object",
            },
          },
        },
        "required": true,
      },
      "responses": {
        "200": {
          "description": "Successful response",
        },
      },
    },
  },
  "/api/getUser": {
    "get": {
      "operationId": "getUser",
      "parameters": [
        {
          "content": {
            "application/json": {
              "schema": {
                "$schema": "https://json-schema.org/draft/2020-12/schema",
                "additionalProperties": false,
                "properties": {
                  "id": {
                    "type": "string",
                  },
                },
                "required": [
                  "id",
                ],
                "type": "object",
              },
            },
          },
          "in": "query",
          "name": "input",
        },
      ],
      "responses": {
        "200": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "result": {
                    "properties": {
                      "data": {
                        "$schema": "https://json-schema.org/draft/2020-12/schema",
                        "additionalProperties": false,
                        "properties": {
                          "id": {
                            "type": "string",
                          },
                          "name": {
                            "type": "string",
                          },
                        },
                        "required": [
                          "id",
                          "name",
                        ],
                        "type": "object",
                      },
                    },
                    "required": [
                      "data",
                    ],
                    "type": "object",
                  },
                },
                "required": [
                  "result",
                ],
                "type": "object",
              },
            },
          },
          "description": "Successful response",
        },
      },
    },
  },
}
`;

exports[`trpc2OpenApi > mutation procedures > should include input schema as request body for mutation procedure 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "email": {
      "format": "email",
      "pattern": "^(?!\\.)(?!.*\\.\\.)([A-Za-z0-9_'+\\-\\.]*)[A-Za-z0-9_+-]@([A-Za-z0-9][A-Za-z0-9\\-]*\\.)+[A-Za-z]{2,}$",
      "type": "string",
    },
    "name": {
      "type": "string",
    },
  },
  "required": [
    "email",
    "name",
  ],
  "type": "object",
}
`;

exports[`trpc2OpenApi > query procedures > should include input schema as query parameter for query procedure 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "additionalProperties": false,
  "properties": {
    "name": {
      "type": "string",
    },
  },
  "required": [
    "name",
  ],
  "type": "object",
}
`;

exports[`trpc2OpenApi > query procedures > should include output schema wrapped in tRPC response envelope 1`] = `
{
  "properties": {
    "result": {
      "properties": {
        "data": {
          "$schema": "https://json-schema.org/draft/2020-12/schema",
          "additionalProperties": false,
          "properties": {
            "message": {
              "type": "string",
            },
          },
          "required": [
            "message",
          ],
          "type": "object",
        },
      },
      "required": [
        "data",
      ],
      "type": "object",
    },
  },
  "required": [
    "result",
  ],
  "type": "object",
}
`;
